feat：添加内嵌编码、字号等全局配置

--- a/配置文件/weasel.custom.yaml
+++ b/配置文件/weasel.custom.yaml
@@ -8,6 +8,10 @@ patch:
   preset_color_schemes:
     wechat_dark: {back_color: 0x2e2925, candidate_text_color: 0xe9e9ea, comment_text_color: 0x999999, hilited_candidate_back_color: 0x75B100, hilited_candidate_text_color: 0xFFFFFF, name: "微信键盘深色", text_color: 0x424242}
     wechat_light: {back_color: 0xFFFFFF, comment_text_color: 0x999999, hilited_candidate_back_color: 0x75B100, hilited_candidate_text_color: 0xFFFFFF, name: "微信键盘浅色", text_color: 0x424242}
-  "style/color_scheme": wechat_light
-  "style/color_scheme_dark": wechat_dark
-  "style/horizontal": true
+  style/color_scheme: wechat_light
+  style/color_scheme_dark: wechat_dark
+  style/horizontal: true
+  style/inline_preedit: true  # 內嵌編碼（僅支持TSF）
+  style/display_tray_icon: true  # 顯示托盤圖標
+  #style/font_face: "明兰"  # 字體名稱，從記事本等處的系統字體對話框裏能看到
+  style/font_point": 16     # 字號，只認數字的，不認「五號」、「小五」這樣的  
